Fix the tab and alignment issues

--- a/src/app/total-downloads/total-downloads.component.css
+++ b/src/app/total-downloads/total-downloads.component.css
@@ -6,7 +6,7 @@
     margin-top: 23px;
 }
 
-label.release-date {
+.release-date label {
     text-align: right;
 }
 
